[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "wkhtmltopdf-proxy"
version = "1.0.0"
description = "A lightweight drop-in replacement for wkhtmltopdf that proxies PDF generation requests to a remote API. It mimics the original CLI interface while transparently offloading the rendering process to a remote service."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "Aurelien ROY", email = "aro@apik.cloud" },
]
dependencies = [
    "requests",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/apikcloud/wkhtmltopdf-proxy"

[project.scripts]
wkhtmltopdf-proxy = "wkhtmltopdf_proxy.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
